<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.HomeActivity"
    android:fitsSystemWindows="true"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:background="@color/colorWhite"
        android:layout_height="44dp">

        <LinearLayout
            android:id="@+id/btn_to_mine_page_layout"
            android:layout_width="88dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.e.lib_common_ui.circle_image_view.CircleImageView
                android:id="@+id/self_photo"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/photo_test"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="13dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="17sp"
            android:textColor="#000000" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/content_layout"
        android:layout_below="@+id/title"
        android:layout_above="@id/bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@color/colorWhite"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/btn_group"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/btn_policy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:button="@null"
                android:drawableTop="@drawable/btn_policy_background"
                android:drawablePadding="4dp"
                android:text="@string/btn_policy"
                android:gravity="center"
                android:textColor="@color/btn_text_color"
                android:textSize="10sp"
                android:background="@null"
                android:checked="true"
                android:textStyle="bold"
                />

            <RadioButton
                android:id="@+id/btn_conference"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:button="@null"
                android:drawableTop="@drawable/btn_conference_background"
                android:drawablePadding="4dp"
                android:text="@string/btn_conference"
                android:gravity="center"
                android:textColor="@color/btn_text_color"
                android:textSize="10sp"
                android:background="@null"
                android:textStyle="bold"
                />
            <RadioButton
                android:id="@+id/btn_demand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:button="@null"
                android:drawableTop="@drawable/btn_demand_background"
                android:drawablePadding="4dp"
                android:text="@string/btn_demand"
                android:gravity="center"
                android:textColor="@color/btn_text_color"
                android:textSize="10sp"
                android:background="@null"
                android:textStyle="bold"
                />

            <RadioButton
                android:id="@+id/btn_talents"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:button="@null"
                android:drawableTop="@drawable/btn_talents_background"
                android:drawablePadding="4dp"
                android:text="@string/btn_talents"
                android:gravity="center"
                android:textColor="@color/btn_text_color"
                android:textSize="10sp"
                android:background="@null"
                android:textStyle="bold"
                />

            <RadioButton
                android:id="@+id/btn_project"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:button="@null"
                android:drawableTop="@drawable/btn_project_background"
                android:drawablePadding="4dp"
                android:text="@string/btn_project"
                android:gravity="center"
                android:textColor="@color/btn_text_color"
                android:textSize="10sp"
                android:background="@null"
                android:textStyle="bold"
                />
        </RadioGroup>
    </LinearLayout>

</RelativeLayout>